--- a/portfolio.qmd
+++ b/portfolio.qmd
@@ -1,3 +1,10 @@
 ---
 title: "Portfolio"
+listing:
+  contents: posts
+  type: grid
+  sort: "date desc"
+  categories: true
+page-layout: full
+title-block-banner: true
 ---
